name:                advent-of-code
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1
                     , Day2
                     , Day3
                     , Day4
                     , Day5
                     , Day6
                     , Day7
                     , Day8
                     , Day9
                     , Day10
                     , Day11
                     , Day12
                     , Day13
                     , Day14
                     , Day15
                     , Day16
                     , Day17
                     , Day18
                     , Day19
                     , Day20
                     , Day21
                     , Day22
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , lens
                     , bytestring
                     , hex
                     , cryptohash
                     , unordered-containers
                     , containers
                     , memoize
                     , hashable
                     , aeson
                     , scientific
                     , vector
                     , text
                     , dlist
                     , linear
                     , JuicyPixels
                     , parallel
                     , binary
                     , primes
  default-language:    Haskell2010

executable advent-of-code-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent-of-code
                     , JuicyPixels
                     , bytestring
                     , Rasterific
                     , vector
  default-language:    Haskell2010

test-suite advent-of-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent-of-code
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent-of-code
